# app/Http/Resources/DonationResource.php
@@ -3,7 +3,7 @@ namespace App\Http\Resources;
 
 use Illuminate\Http\Resources\Json\JsonResource;
 
- /**
+/**
  * @OA\Schema(
  *     schema="DonationRequest",
  *     type="object",
@@ -14,8 +14,9 @@ use Illuminate\Http\Resources\Json\JsonResource;
  *     @OA\Property(property="ally_id", type="integer", example="3001"),
  *     @OA\Property(property="details", type="string", example="Implementación de energía renovable en zonas rurales."),
  *     @OA\Property(property="contribution_type", type="string", example="Energía"),
+ *     @OA\Property(property="images", type="array", @OA\Items(type="string", format="binary"), description="Imágenes del proyecto"),
  *     @OA\Property(property="amount", type="number", format="float", example="500000"),
- *     @OA\Property(property="evidence", type="string", example="Ruta/a/imagen.jpg", description="Ruta del archivo de evidencia"),
+
  * )
  */
 class DonationResource extends JsonResource
@@ -30,16 +31,14 @@ class DonationResource extends JsonResource
  *     @OA\Property(property="activity_id", type="integer", example="2001"),
  *     @OA\Property(property="date_donation", type="string", format="date", example="2025-01-01"),
  *     @OA\Property(property="ally_id", type="integer", example="3001"),
+ *     @OA\Property(property="images", type="string", example="Imagen Ruta"),
  *     @OA\Property(property="details", type="string", example="Implementación de energía renovable en zonas rurales."),
  *     @OA\Property(property="contribution_type", type="string", example="Energía"),
  *     @OA\Property(property="amount", type="number", format="float", example="500000"),
- *     @OA\Property(property="evidence", type="string", example="Ruta/a/imagen.jpg"),
+
  *     @OA\Property(property="created_at", type="string", format="date-time", example="2025-01-26T21:44:24"),
  * )
  */
-
-
-
 
     public function toArray($request)
     {
@@ -52,7 +51,7 @@ class DonationResource extends JsonResource
             'details'           => $this->details ?? null,
             'contribution_type' => $this->contribution_type ?? null,
             'amount'            => $this->amount ?? null,
-            'evidence'          => $this->evidence ?? null,
+            'images'            => $this->images ? explode(',', $this->images) : [], // Asumiendo que las imágenes están almacenadas como una cadena separada por comas
             'created_at'        => $this->created_at,
         ];
     }
